@@ -16,6 +16,7 @@ Version 1.1.1 to be released
 - Enh: Improved the code generated by yiic, including menu refactoring, filtering/search support, and using active form (Qiang)
 - Enh: Improved CHtml::beginForm() to auto-generate hidden fields for a GET form whose action contains query string (Qiang)
 - Enh: Added CDataProvider::setTotalItemCount() (Qiang)
+- Chg #841: Changed CUrlManager::parsePathInfo() to non-static (Qiang)
 - Chg: CFormElement::attributes is renamed to be CFormElement::htmlOptions (Qiang)
 - New: Added CActiveForm that performs model validations via AJAX (Qiang)
 
